Use single-threaded sha1 if workers are not available ( #5 )

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ label
 
 <div id="progressbar_container" class="progress-bar-hidden" style="margin-left: 20px; border: 2px solid #bcbcbc; border-radius: 5px; width: calc(100% - 50px); position: relative;">
     <div id="progressbar" style="background: #23b235; width: 0%; height: 100%; border-radius: 3px;"></div>
-    <div id="progressbar_text"style="display:block; position: absolute; bottom: 4px; font-size: 25px; padding-bottom: 2px; padding-left: 6px; text-shadow: 2px 2px 5px blue;"></div>
+    <div id="progressbar_text" style="display:block; position: absolute; bottom: 4px; font-size: 25px; padding-bottom: 2px; padding-left: 6px; text-shadow: 2px 2px 5px blue;"></div>
 </div>
 
 <div id="progressbar_processing_container" class="progress-bar-hidden"
@@ -271,9 +271,7 @@ label
 </div>
 
 <button id="create_torrent_button" style="display: grid; margin: 20px 0px 0px 20px; width: calc(100% - 46px); max-width: 600px; height: 100px; font-size: 50px; line-height: 80px;"
-    onclick="CreateTorrent()" disabled>
-    Create torrent
-</button>
+    onclick="CreateTorrent()" disabled>Create torrent</button>
 </div>
 
 <script src="dist/index.js"></script>
