Display failure reason when a file could not be read

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ label
     oninput="TorrentParamsChanged('source')">
 <br />
 
-<div id="error_text" style="display: none; font-size: 25px; color: #ff3d58; margin-left: 20px; margin-bottom: 20px;"></div>
+<div id="error_text" style="display: none; font-size: 25px; color: #ff3d58; margin-left: 20px; margin-bottom: 20px; white-space: pre-line;"></div>
 
 <div id="progressbar_container" class="progress-bar-hidden" style="margin-left: 20px; border: 2px solid #bcbcbc; border-radius: 5px; width: calc(100% - 50px); position: relative;">
     <div id="progressbar" style="background: #23b235; width: 0%; height: 100%; border-radius: 3px;"></div>
